@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: interp.test,v 1.18 2002/11/23 01:22:51 hobbs Exp $
+# RCS: @(#) $Id: interp.test,v 1.19 2003/02/05 20:05:47 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -258,8 +258,8 @@ test interp-7.4 {testing basic alias creation} {
     a alias bar
 } {in_master a1 a2 a3}
 test interp-7.5 {testing basic alias creation} {
-    a aliases
-} {foo bar}
+    lsort [a aliases]
+} {bar foo}
 test interp-7.6 {testing basic aliases arg checking} {
     list [catch {a aliases too many args} msg] $msg
 } {1 {wrong # args: should be "a aliases"}}
